--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon -L",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "dependencies": {
